wazchlist loaded